--- a/scss/game/front/navbar.css
+++ b/scss/game/front/navbar.css
@@ -42,6 +42,12 @@
   margin-left: 2rem;
   font-family: "Kanit", sans-serif;
 }
+.navbar .navbar-container .navbar-container-left > button > a {
+  color: white;
+  text-decoration: none;
+  text-underline: none;
+  transition: color 0.5s;
+}
 .navbar .navbar-container .navbar-container-left > button .underline {
   width: 0;
   height: 0.125rem;
