--- a/scss/game/game/pauseModal.scss
+++ b/scss/game/game/pauseModal.scss
@@ -2,7 +2,31 @@
 
 
 #pause-modal {
+  @include absolute(50%, 50%);
+  //@include max-size(1920px, 1080px);
+  @include size(100vw, 100vw);
+  transform: translate(-50%, -50%);
+  display: none;
+  background-color: rgb(0, 0, 0, 0.5);
+  z-index: 100;
+
+
   .modal {
-    @include flex-rules(column, center, center);
+    @include absolute(50%, 50%);
+    display: flex;
+
+    .title {
+      @include text-config-game(title);
+      @include absolute(10%, 50%);
+      background-color: transparent;
+      text-align: center;
+    }
+
+    .button {
+      @include hoverable;
+      @include text-config-game(button);
+      width: 91%;
+      text-align: center;
+    }
   }
 }
