--- a/scss/game/game/selectionModal.scss
+++ b/scss/game/game/selectionModal.scss
@@ -23,6 +23,7 @@
       @include animationArrow(left);
       background-color: transparent;
       width: 20vw;
+      cursor: pointer;
     }
 
     img {
@@ -34,6 +35,7 @@
       @include animationArrow(right);
       background-color: transparent;
       width: 20vw;
+      cursor: pointer;
     }
   }
 
