--- a/scss/game/game.css
+++ b/scss/game/game.css
@@ -214,6 +214,7 @@
   animation: arrowMoveLeft 0.5s steps(2) infinite;
   background-color: transparent;
   width: 20vw;
+  cursor: pointer;
 }
 #selection-modal .image-container img {
   width: 30vw;
@@ -224,6 +225,7 @@
   animation: arrowMoveRight 0.5s steps(2) infinite;
   background-color: transparent;
   width: 20vw;
+  cursor: pointer;
 }
 #selection-modal .button {
   cursor: pointer;
