--- a/scss/front/about.css
+++ b/scss/front/about.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 10rem;
+  scroll-snap-align: start;
 }
 .about-container .inner-container {
   display: flex;
@@ -10,6 +12,7 @@
   justify-content: center;
   align-items: center;
   width: 75%;
+  padding-bottom: 2vw;
 }
 .about-container .inner-container .images-container {
   display: flex;
@@ -26,6 +29,9 @@
   width: 100%;
   height: 15vw;
   overflow-y: hidden;
+}
+.about-container .inner-container .images-container .image-box .drifter-attack-image {
+  transform: scaleX(-1);
 }
 .about-container .inner-container .images-container .image-box > img {
   height: 100%;
@@ -48,14 +54,19 @@
   flex: 3;
 }
 .about-container .inner-container .about-content > h1 {
-  font-size: 2rem;
+  font-family: "Kanit", sans-serif;
   font-weight: 600;
-}
-.about-container .inner-container .about-content .line {
-  background-color: rgb(253, 27, 94);
-  height: 0.1rem;
+  color: white;
+  font-size: 40px;
+  border-bottom: 0.3rem solid rgb(253, 27, 94);
 }
 .about-container .inner-container .about-content > p {
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  color: white;
+  font-size: 16px;
+  letter-spacing: 0.1rem;
+  letter-spacing: 0.1rem;
   font-family: "Kanit", sans-serif;
 }
 
