--- a/scss/front/mainCharacter.scss
+++ b/scss/front/mainCharacter.scss
@@ -28,7 +28,7 @@
       right: 0;
       bottom: 0;
       left: 0;
-      background: url("../../../assets/web/parallax/campfire.png") center;
+      background: url("../../assets/web/parallax/campfire.png") center;
       transform: scale(1);
       z-index: -1;
     }
