--- a/scss/front/score.css
+++ b/scss/front/score.css
@@ -5,6 +5,7 @@
   align-items: center;
   z-index: 10;
   margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 .score-container .score-content {
   display: flex;
@@ -13,10 +14,15 @@
   align-items: center;
   margin: 0 2rem;
   height: auto;
+  overflow: hidden;
 }
 .score-container .score-content > img {
   width: 40vw;
   height: 100%;
+  transition: transform 0.5s;
+}
+.score-container .score-content > img:hover {
+  transform: scale(1.05);
 }
 .score-container .score-content .score-container {
   display: flex;
@@ -24,7 +30,7 @@
   justify-content: center;
   align-items: start;
   overflow-y: hidden;
-  gap: 5vw;
+  gap: 4.5vw;
 }
 .score-container .score-content .score-container .score {
   display: flex;
@@ -34,7 +40,8 @@
   overflow-y: hidden;
   position: relative;
   border: 0.05rem solid white;
-  padding: 0.5rem;
+  padding: 0.5vw;
+  padding-bottom: 1.3wv;
   width: 12vw;
   aspect-ratio: 2;
   color: white;
