--- a/scss/game/game.scss
+++ b/scss/game/game.scss
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-@import "animations";
-@import "variables";
-@import "mixins";
-@import "./game/navbar";
-@import "./game/loadingModal";
-@import "./game/menuModal";
-@import "./game/selectionModal";
-@import "./game/settingsModal";
-@import "./game/pauseModal";
-@import "../game/modal";
-@import "./front/modal";
+@import "../animations";
+@import "../variables";
+@import "../mixins";
+@import "./navbar";
+@import "./loadingModal";
+@import "./menuModal";
+@import "./selectionModal";
+@import "./settingsModal";
+@import "./pauseModal";
+@import "../modal";
+@import "../front/modal";
 
 $pink-color: rgb(254, 31, 136);
 
