--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "animations";
-@import "front/about";
+@import "front/about.css";
 @import "front/navbar.css";
-@import "front/score";
+@import "front/score.css";
 @import "front/footer.css";
-@import "front/trailer";
-@import "front/mainCharacter";
-@import "front/world";
+@import "front/trailer.css";
+@import "front/mainCharacter.css";
+@import "front/world.css";
 @import "front/modal";
 @import "front/news.css";
 @import "front/ost.css";
