--- a/scss/game/game.css
+++ b/scss/game/game.css
@@ -417,7 +417,7 @@
   image-rendering: pixelated;
   aspect-ratio: 18/15;
   background-color: transparent;
-  background-image: url("HyperWLightDrifter/assets/ui/menu_modal.png");
+  background-image: url("./../../assets/ui/menu_modal.png");
   opacity: 100%;
   position: absolute;
   display: none;
