--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -8,7 +8,7 @@
   @include background-image-settings;
   aspect-ratio: 18/15;
   background-color: transparent;
-  background-image: url('HyperWLightDrifter/assets/ui/menu_modal.png');
+  background-image: url('./../../assets/ui/menu_modal.png');
   opacity: 100%;
   position: absolute;
   display: none;
