--- a/scss/front/trailer.scss
+++ b/scss/front/trailer.scss
@@ -14,4 +14,10 @@
     font-size: 48px;
     border-bottom: 0.3rem solid $pink-color;
   }
+
+  iframe {
+    width: 70vw;
+    height: 39.375vw;
+  }
+
 }
