--- a/scss/front/footer.scss
+++ b/scss/front/footer.scss
@@ -18,7 +18,8 @@
     width: 100vw;
     height: 15rem;
     object-fit: cover;
-    filter: blur(2px);
+    filter: blur(2px) opacity(0.5);
+    //filter: opacity();
   }
 
   .footer-container {
@@ -35,11 +36,19 @@
       gap: 1rem;
       margin-bottom: 1rem;
 
-      .icons {
+      .icons a {
         @include flex-rules(row, center, center);
         background-color: white;
         width: 3rem;
         aspect-ratio: 1;
+        opacity: 1;
+        transition: 0.3s;
+        border: none;
+        outline: none;
+
+        &:hover {
+          background-color: rgb(0, 0, 0, 0.5);
+        }
       }
     }
   }
