--- a/scss/front/footer.scss
+++ b/scss/front/footer.scss
@@ -45,6 +45,13 @@
         transition: 0.3s;
         border: none;
         outline: none;
+        overflow: hidden;
+
+        > img {
+          width: 2rem;
+          height: 2rem;
+          object-fit: cover;
+        }
 
         &:hover {
           background-color: rgb(0, 0, 0, 0.5);
