--- a/scss/front/news.css
+++ b/scss/front/news.css
@@ -140,6 +140,7 @@
   line-height: 20px;
   font-size: 14px;
   margin: 0.5vw 0.5vw 0;
+  overflow: hidden;
 }
 
 /*# sourceMappingURL=news.css.map */
