--- a/scss/front/news.scss
+++ b/scss/front/news.scss
@@ -93,6 +93,7 @@
             line-height: 20px;
             font-size: 14px;
             margin: 0.5vw 0.5vw 0;
+            overflow: hidden;
           }
         }
       }
