--- a/scss/front/ost.css
+++ b/scss/front/ost.css
@@ -18,6 +18,7 @@
   font-size: 48px;
   border-bottom: 0.3rem solid rgb(253, 27, 94);
   margin-bottom: 3vw;
+  overflow: hidden;
 }
 .ost-container .inner-container-ost .ost-content {
   display: flex;
@@ -31,8 +32,10 @@
   position: relative;
   width: 30vw;
 }
-.ost-container .inner-container-ost .ost-content .content-left .audio-progress {
+.ost-container .inner-container-ost .ost-content .content-left #audio-progress {
   position: absolute;
+  width: 100%;
+  height: 100%;
 }
 .ost-container .inner-container-ost .ost-content .content-left > img {
   width: 100%;
