--- a/scss/front/ost.scss
+++ b/scss/front/ost.scss
@@ -10,6 +10,7 @@
     > h3 {
       @include headerTitleCenter;
       margin-bottom: 3vw;
+      overflow: hidden;
     }
 
     .ost-content {
@@ -21,8 +22,11 @@
         position: relative;
         width: 30vw;
 
-        .audio-progress {
+        #audio-progress {
           position: absolute;
+          //background-color: $pink-color;
+          width: 100%;
+          height: 100%;
         }
 
         > img {
